gateway-and-cert.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: admin
  namespace: istio-system
spec:
  selector:
    app: admin-ingressgateway
  servers:
    - hosts:
        - '*.bigbang.dev'
      port:
        name: http
        number: 8080
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - '*.bigbang.dev'
      port:
        name: https
        number: 8443
        protocol: HTTPS
      tls:
        credentialName: admin-cert
        minProtocolVersion: TLSV1_3
        mode: SIMPLE
